--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,7 @@ sonar.organization=gomo-star-creator
 sonar.projectName=APDS7311_POE_PART3_ST10356945_ST10274003
 sonar.projectVersion=1.0
 
-sonar.sources=src
+sonar.sources=.
+sonar.exclusions=node_modules/**, coverage/**, dist/**, build/**
 
 sonar.sourceEncoding=UTF-8
