--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,25 +31,18 @@ jobs:
             cd frontend && npm run build
             cd ..
 
-      # Run tests (optional)
-      - run:
-          name: Run tests
-          command: |
-            echo "Running tests..."
-            cd backend && npm test || echo "No tests found"
-            cd ..
+    
 
       # SonarQube Scan
       - run:
           name: Run SonarQube Scan
           command: |
-            echo "Running SonarQube scan..."
             sonar-scanner \
               -Dsonar.projectKey=Gomo-star-creator_APDS7311_POE_PART3_ST10356945_ST10274003 \
               -Dsonar.organization=Gomo-star-creator \
               -Dsonar.sources=. \
-              -Dsonar.host.url=$SONAR_HOST_URL \
-              -Dsonar.login=$SONAR_TOKEN
+              -Dsonar.host.url=${SONAR_HOST_URL} \
+              -Dsonar.login=${SONAR_TOKEN}
 
 workflows:
   version: 2
