--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   node: circleci/node@5.1.0
 
 jobs:
-  build:
+  build-and-sonarqube:
     docker:
       - image: cimg/node:20.11  # Node.js image with npm and yarn
       - image: sonarsource/sonar-scanner-cli:latest  # SonarQube scanner
@@ -48,5 +48,5 @@ workflows:
   version: 2
   build_and_scan:
     jobs:
-      - build
+      - build-and-sonarqube
 
